<resources>
    <string name="app_name">Anydone Desk</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_phone">Email / Phone</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="google">GOOGLE</string>
    <string name="verify">Verify</string>
    <string name="remember_me">Remember Me</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="send_reset_code">Send reset code</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="no_account">Don"'"t have an account?</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_msg">Please type the verification code sent to</string>
    <string name="resend_code_msg">Didn"'"t get the code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_otp_in">Resend code in: </string>
    <string name="resend_otp_in_time">01:30</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here">Login here</string>
    <string name="full_name">Full Name</string>
    <string name="agree_terms_and_conditions">Agree Terms and Conditions</string>
    <string name="address">Address</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="setting">Settings</string>
    <string name="notification">Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="connect_to_internet">No internet connection</string>
    <string name="password_changed">Password Changed!</string>
    <string name="your_password_has_been_changed_successfully">Your password has been changed successfully</string>
    <string name="find_services">Find Services</string>
    <string name="service_requests">Service Requests</string>
    <string name="billings">Billings</string>
    <string name="mention_issue">Mention your issue here.</string>
    <string name="search_services">Search services</string>
    <string name="listening">Listening...</string>
    <string name="voice_not_detected">Voice not detected, please try again</string>
    <string name="cancelled">Cancelled</string>
    <string name="language_setting">Language Setting</string>
    <string name="english" translatable="false">English</string>
    <string name="nepali" translatable="false">नेपाली</string>
    <string name="hebrew" translatable="false">עִברִית</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="french" translatable="false">Français</string>
    <string name="german" translatable="false">Deutsche</string>
    <string name="notification_settings">Notification Setting</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="about">About</string>
    <string name="billing">Billing</string>
    <string name="payment_method">Payment Method</string>
    <string name="transactions">Transactions</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="billing_address">Billing Address</string>
    <string name="save_card_as_primary">Save card as primary</string>
    <string name="add_credit_or_debit_card">Add credit or debit card</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="explain_your_problem">Explain your problem</string>
    <string name="give_location">Give us your location</string>
    <string name="choose_date">Choose date</string>
    <string name="approve">Approve</string>
    <string name="as_final_step_please_read_and_approve_the">As final step, please read and approve the</string>
    <string name="terms_of_services">terms of services</string>
    <string name="confirm">Confirm</string>
    <string name="add_card">Add Card</string>
    <string name="location_not_found">Location not found. Try Again</string>
    <string name="logout">Logout</string>
    <string name="please_type_the_code_sent_to">Please type the code sent to</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_settings">Password Settings</string>
    <string name="set_email">Add Email</string>
    <string name="set_name">Add Name</string>
    <string name="set_phone">Add Phone</string>
    <string name="set_address">Add Address</string>
    <string name="set_gender">Add Gender</string>
    <string name="code">Code</string>
    <string name="enter_code">Enter code</string>
    <string name="open_camera">Open Camera</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="pick_specific_date">Pick specific date</string>
    <string name="pick_date_range">Pick date range</string>
    <string name="edit_problem_statement">Edit Problem Statement</string>
    <string name="pick_time">Pick Time</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="pending">Pending</string>
    <string name="type_a_message">Type a message</string>
    <string name="video_call">Video Call</string>
    <string name="audio_call">Audio Call</string>
    <string name="overflow_menu">Overflow Menu</string>
    <string name="mentions">&amp;amp Mentions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_requested_by">Service Requested By:</string>
    <string name="bot_text1">Hello user</string>
    <string name="bot_text2">Your request has been sent and is pending. Until the request is accepted, ask me your questions</string>
    <string name="remove">Remove</string>
    <string name="copy">Copy</string>
    <string name="default_notification_channel_id">messaging_channel</string>
    <string name="not_delivered">Not Delivered</string>
    <string name="seen">Seen</string>
    <string name="files">Files</string>
    <string name="camera">Camera</string>
    <string name="recorder">Recorder</string>
    <string name="gallery">Gallery</string>
    <string name="add_a_caption">Add caption...</string>
    <string name="accepted">Accepted</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="sent">Sent</string>
    <string name="mark_as_complete">Mark as done</string>
    <string name="language">Language</string>
    <string name="video_settings">Video Settings</string>
    <string name="location">Location</string>
    <string name="timezone">Timezone</string>
    <string name="nepal">Nepali</string>
    <string name="use_camera_2">Use Camera 2</string>
    <string name="video_resolution">Video resolution</string>
    <string name="camera_fps">Camera FPS</string>
    <string name="maximum_video_bitrate_setting">Maximum video bitrate setting</string>
    <string name="video_encoder_maximum_bitrate">Video encoder maximum bitrate</string>
    <string name="default_video_codec">Default Video Codec</string>
    <string name="audio_bitrate_setting">Audio bitrate setting</string>
    <string name="audio_codec_bitrate">Audio codec bitrate</string>
    <string name="default_audio_codec">Default audio codec</string>
    <string name="disable_audio_processing">Disable audio processing</string>
    <string name="add_location">Add Location</string>
    <string name="location_type">Location Type</string>
    <string name="search_location">Search Location</string>
    <string name="started">Started</string>
    <string name="closed">Closed</string>
    <string name="model_no">Model no</string>
    <string name="anydone_desc">Anydone Desk is a one-stop solution to enhance customer service experience and engagement
        for greater customer satisfaction rate. We build a communication bridge to fill in
        the gap between end-users and service providers. Our core strength is in our AI- powered
        tools that ensure better performance and guaranteed professional results.</string>
    <string name="language_change_check">language change check</string>
    <string name="currency">Currency</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="reset">Reset</string>
    <string name="tickets">Tickets</string>
    <string name="assigned_tickets">Assigned Tickets</string>
    <string name="more">More</string>
    <string name="employee_first_login_text">It seems its your first login, please set new password to continue.</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="assigned_to">Assigned to</string>
    <string name="summary">Summary</string>
    <string name="customer_name">Requester Name</string>
    <string name="phone">Phone</string>
    <string name="assign_employee">Assign Employee</string>
    <string name="label">Label</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="todo">Todo</string>
    <string name="reopen">Reopened</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="priority">Priority*</string>
    <string name="search_employee">Search Employee</string>
    <string name="select_employee">Select Employee</string>
    <string name="yesterday">Yesterday</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="messenger">Messenger</string>
    <string name="viber">Viber</string>
    <string name="description">Description</string>
    <string name="team">Team</string>
    <string name="prior">Priority</string>
    <string name="required">*</string>
    <string name="highest">Highest</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="lowest">Lowest</string>
    <string name="low">Low</string>
    <string name="done">Done</string>
    <string name="unassigned">Unassigned</string>
    <string name="resolved">Resolved</string>
    <string name="bot">Bot</string>
    <string name="phone_call">Phone call</string>
    <string name="manual">Manual</string>
    <string name="_3rd_party_app">3rd party</string>
    <string name="add">Add</string>
</resources>