<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_2x4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dimens_12x"
            android:layout_height="@dimen/dimens_12x"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dimens_4x"
            android:layout_marginRight="@dimen/dimens_4x"
            android:layout_marginBottom="@dimen/dimens_2x"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_mark_text" />

        <TextView
            android:id="@+id/tv_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimens_2x"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_1x"
            android:hint="@string/enter_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_old_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_1x"
            android:hint="@string/old_password"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_1x"
            android:hint="@string/new_password"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_1x"
            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_10x6"
            android:layout_marginStart="@dimen/dimen_10x1"
            android:layout_marginTop="@dimen/dimen_10x2"
            android:layout_marginEnd="@dimen/dimen_10x1"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_2x6"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10x1"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code_msg" />

            <TextView
                android:id="@+id/tv_resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_2x2"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_otp_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10x2"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp_in" />

            <TextView
                android:id="@+id/tv_code_expires_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_2x2"
                android:text="@string/resend_otp_in_time"
                android:textColor="@color/red" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>