<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_2x4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dimens_12x"
            android:layout_height="@dimen/dimens_12x"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dimens_4x"
            android:layout_marginTop="@dimen/dimens_15x"
            android:layout_marginRight="@dimen/dimens_4x"
            android:layout_marginBottom="@dimen/dimens_2x"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_mark_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimen_2x4"
            android:gravity="center_horizontal"
            android:text="@string/please_type_the_code_sent_to" />

        <TextView
            android:id="@+id/tv_user_email_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_2x4"
            android:gravity="center_horizontal" />

        <include
            layout="@layout/layout_vefication_digits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10x2"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dimen_10x1"
            android:layout_marginEnd="@dimen/dimen_10x1" />

        <LinearLayout
            android:id="@+id/ll_resend_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_2x6"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code_msg" />

            <TextView
                android:id="@+id/tv_resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_2x2"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_otp_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10x2"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp_in" />

            <TextView
                android:id="@+id/tv_code_expires_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_2x2"
                android:text="@string/resend_otp_in_time"
                android:textColor="@color/red" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>